--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -10,6 +10,15 @@ html
     link(rel='stylesheet', href='/themes/admin-lte/libs/bootstrap/dist/css/bootstrap.min.css')
     // Font Awesome
     link(rel='stylesheet', href='/themes/admin-lte/libs/font-awesome/css/font-awesome.min.css')
+    style(type='text/css').
+        .checkbox label {
+            
+        }
+        .checkbox label input {
+           width: 14px;
+           height: 14px;
+           margin: 2px 0 0;
+        }
   // ADD THE CLASS fixed TO GET A FIXED HEADER AND SIDEBAR LAYOUT
   // the fixed layout is not compatible with sidebar-mini
   body.hold-transition.skin-blue.fixed.sidebar-mini
