--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -17,19 +17,21 @@ html
     //
       AdminLTE Skins. Choose a skin from the css/skins
       folder instead of downloading all of them to reduce the load.
-    link(rel='stylesheet', href='/themes/admin-lte/css/skins/_all-skins.min.css')
+    //- link(rel='stylesheet', href='/themes/admin-lte/css/skins/_all-skins.min.css')
+    link(rel='stylesheet', href='/themes/admin-lte/css/skins/skin-green.min.css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+    link(rel='stylesheet', href='/stylesheets/main.css')
     // Google Font
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic')
 
     block stylesheets
   // ADD THE CLASS fixed TO GET A FIXED HEADER AND SIDEBAR LAYOUT
   // the fixed layout is not compatible with sidebar-mini
-  body.hold-transition.skin-blue.fixed.sidebar-mini
+  body.hold-transition.skin-green.fixed.sidebar-mini
     // Site wrapper
     .wrapper
       include ./header	
@@ -57,4 +59,5 @@ html
     // AdminLTE App
     script(src='/themes/admin-lte/js/adminlte.min.js')
     // AdminLTE for demo purposes
+    script(src='/javascripts/main.js')
     block javascripts
