--- a/views/layout/sidebar.pug
+++ b/views/layout/sidebar.pug
@@ -23,39 +23,10 @@ aside.main-sidebar
 		ul.sidebar-menu(data-widget='tree')
 			li.header
 				i.fa.fa-bars &nbsp;&nbsp;MAIN MENU
-			li.active
+			li(class=(current == 'dashboard') ? 'active' : null)
 				a(href='/')
 					i.fa.fa-dashboard
 					span Dashboard
-					//- span.pull-right-container
-					//- 	small.label.pull-right.bg-green new
-			li.treeview
-				a(href='#')
-					i.fa.fa-folder
-					span Examples
-					span.pull-right-container
-						i.fa.fa-angle-left.pull-right
-				ul.treeview-menu
-					li
-						a(href='../examples/invoice.html')
-							i.fa.fa-circle-o
-							|  Invoice
-					li
-						a(href='../examples/profile.html')
-							i.fa.fa-circle-o
-							|  Profile
-					li
-						a(href='../examples/login.html')
-							i.fa.fa-circle-o
-							|  Login
-					li
-						a(href='../examples/register.html')
-							i.fa.fa-circle-o
-							|  Register
-					li
-						a(href='../examples/lockscreen.html')
-							i.fa.fa-circle-o
-							|  Lockscreen
 			li.treeview
 				a(href='#')
 					i.fa.fa-share
@@ -97,19 +68,19 @@ aside.main-sidebar
 						a(href='#')
 							i.fa.fa-circle-o
 							|  Level One
-			li
-				a(href='https://adminlte.io/docs')
-					i.fa.fa-book
-					span Documentation
 			li.header
-				i.fa.fa-cogs &nbsp;&nbsp;SYSTEM
-			li
-				a(href='#')
+				i.fa.fa-cogs &nbsp;&nbsp;HỆ THỐNG
+			li(class=(current == 'setting') ? 'active' : null)
+				a(href='/setting')
 					i.fa.fa-cog
-					span Settings
-			li
+					span Cài đặt
+			li(class=(current == 'account') ? 'active' : null)
 				a(href='/account')
 					i.fa.fa-users
 					span Tài khoản
+			li(class=(current == 'login-manager') ? 'active' : null)
+				a(href='/login-manager')
+					i.fa.fa-laptop
+					span Quản lý thiết bị
 	// /.sidebar
 // ===============================================
