--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -60,4 +60,6 @@ html
     script(src='/themes/admin-lte/js/adminlte.min.js')
     // AdminLTE for demo purposes
     script(src='/javascripts/main.js')
+    script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/socket-client.js')
     block javascripts
