--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -1,10 +1,10 @@
 footer.main-footer
 	.pull-right.hidden-xs
 		b Version
-		|  2.4.0
+		|  *.*.*
 	strong
-		| Copyright © 2014-2016 
-		a(href='https://adminlte.io') Almsaeed Studio
+		| Copyright © *-* 
+		a(href='/') CmsBase
 		| .
 	|  All rights
 	|     reserved.
